# prismatical

./: .gitignore  CMakeLists.txt  README.md
src/: config.h  main.cpp  seed_randomizer.cpp  seed_randomizer.h
src/fractal/: fractal.cpp  fractal.h
src/input/: input.cpp  input.h
src/renderer/: renderer.cpp  renderer.h
src/scene/: scene.cpp  scene.h
src/wave/: wave.cpp  wave.h
